Applies formatting